hphp/hack/test/typecheck/expression_trees/splice_err2.php.exp
ERROR: File "splice_err2.php", line 9, characters 23-27:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 366, characters 26-35:
  Expected `ExampleInt`
  File "expr_tree.php", line 92, characters 40-52:
  But got `ExampleString`
  File "expr_tree.php", line 72, characters 47-52:
    via this generic `TInfer`
  File "expr_tree.php", line 37, characters 44-49:
    via this generic `TInfer`
  File "expr_tree.php", line 76, characters 96-101:
    via this generic `TInfer`
  File "expr_tree.php", line 435, characters 73-73:
    via this generic `T`
